# 20q-api

./: 20q.py  README.md  demo.py  pyproject.toml  requirements.txt  run_api.py  run_cli.py  run_game.bat  test_functionality.py
.github/workflows/: ci.yml
data/: objects.json  questions.json
data/priors/: default_weights.json
data/priors/cohort_weights/: asia.json  eu.json  middle_age.json  us.json  young_adults.json
src/twentyq_ann/: __init__.py  api.py  cli.py  core.py  demographics.py  io.py  questions.py
tests/: test_core.py  test_quantization.py
tests/fixtures/: sample_weights.json
