[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "twentyq-ann"
version = "0.1.0"
description = "Production-quality 20 Questions engine based on ANN target-object × question matrix"
authors = ["Kurt <kurt@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "twentyq_ann", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
fastapi = {version = "^0.104.0", optional = true}
uvicorn = {version = "^0.24.0", optional = true}
pydantic = "^2.0.0"
click = "^8.0.0"
typing-extensions = "^4.0.0"

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[tool.poetry.scripts]
twentyq = "twentyq_ann.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/twentyq_ann --cov-report=html --cov-report=term-missing"
